# citysense

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  citysense.toml.example  environment.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  requirements-build.txt  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql-analysis.yml  fuzz.yml  release.yml  scorecard-analysis.yml
docs/: index.md  mcp-integration.md  quickstart.md
docs/guides/: configuration.md  installation.md  mcp.md
docs/reference/: mathematical-foundations.md
fuzz/: Dockerfile  __init__.py  build.sh  fuzz_bbox.py  fuzz_intent.py  fuzz_metrics.py  fuzz_validation.py
scripts/: release.ps1  release.sh
src/citysense/: __init__.py  _version.py
src/citysense/cli/: __init__.py  main.py
src/citysense/climate/: __init__.py  resilience.py
src/citysense/connectors/: __init__.py  base.py  kartaview.py  mapillary.py  osm.py  sentinel.py
src/citysense/core/: __init__.py  config.py  exceptions.py  logging.py  registry.py  session.py
src/citysense/geo/: __init__.py  bbox.py  crs.py  geometry.py  h3.py  osm.py  raster.py
src/citysense/governance/: __init__.py
src/citysense/housing/: __init__.py
src/citysense/imagery/: __init__.py
src/citysense/imagery/satellite/: __init__.py  indices.py
src/citysense/mcp/: __init__.py  server.py
src/citysense/mcp/tools/: spatial_query.py
src/citysense/pilot/: __init__.py  az.py  base.py  fi.py
src/citysense/rag/: __init__.py  assembler.py  embedder.py  intent.py  pipeline.py  reranker.py  retriever.py
src/citysense/rag/index/: __init__.py  builder.py  store.py
src/citysense/realtime/: __init__.py
src/citysense/urban/: __init__.py  sdg11.py
src/citysense/utils/: validation.py
tests/: __init__.py  conftest.py
tests/unit/: test_assembler.py  test_bbox.py  test_cli.py  test_cli_commands.py  test_config.py  test_connectors.py  test_crs.py  test_exceptions.py  test_geometry.py  test_h3.py  test_indices.py  test_intent.py  test_logging.py  test_mapillary.py  test_osm.py  test_osm_connector.py  test_pilot.py  test_pilot_az.py  test_rag_init.py  test_registry.py  test_reranker.py  test_resilience.py  test_sdg11.py  test_session.py  test_validation.py
